fixed poster block spacing and adjusted ticket button position

--- a/assets/css/zz_master.styl
+++ b/assets/css/zz_master.styl
@@ -635,6 +635,12 @@ section.ticket-packages-container
 		border-top 7.5px solid $white
 		height 350px
 
+	.poster
+		padding 5px
+
+	.amenities
+		padding-top 0
+
 	.vimeo-video
 		height 350px
 
@@ -651,6 +657,9 @@ section.ticket-packages-container
 		border-top 0
 		border-left 7.5px solid $white
 		height 400px
+
+	.poster
+		padding 0
 
 	.vimeo-video
 		height 500px
@@ -1037,7 +1046,7 @@ section.amenities
 				border 10px solid $white
 	
 	.poster-tickets-button
-		bottom 53px
+		bottom 10px
 
 	.subscribe-bar-content
 		height 150px
@@ -1161,6 +1170,9 @@ section.amenities
 	section.amenities
 		height 2100px
 
+	.poster-tickets-button
+		bottom 25px
+
 @media (min-width: 550px)
 	section.amenities
 		height 2200px
@@ -1197,7 +1209,7 @@ section.amenities
 				border 5px solid $white
 
 	.poster-tickets-button
-		bottom 100px
+		bottom 50px
 
 	.ticket-bar
 		height 70px
@@ -1329,18 +1341,18 @@ section.amenities
 	.grizzlyfest-block
 		padding-right 25%
 
-@media (min-width: 2300px)
-	.ga-tickets
-		margin-left 30%
+// @media (min-width: 2300px)
+// 	.ga-tickets
+// 		margin-left 30%
 
-	.vip-tickets
-		margin-right 30%
+// 	.vip-tickets
+// 		margin-right 30%
 
-	.social-block
-		padding-left 30%
+// 	.social-block
+// 		padding-left 30%
 	
-	.grizzlyfest-block
-		padding-right 30%
+// 	.grizzlyfest-block
+// 		padding-right 30%
 
 //=================================================================//
 .overlay
@@ -1385,3 +1397,7 @@ section.amenities
 	font-weight bold
 	text-decoration none
 	color #666666
+
+.poster
+	position relative
+	top	60px
